Update index.html and styles.css: modified description text, changed image source, and adjusted CSS styles for better layout and image handling.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <div class = "pill">
     <div class ="title"> 
     <h1 class = "name">John Yang </h1>
-    <p class ="description">Programmer, likes making videos sometimes</p>
+    <p class ="description">Programmer, also likes making videos</p>
     </div>
     <div class = "img">
-    <img class="image" src="older.jpg" alt="Your Image">
+    <img class="image" src="Selfie.png" alt="Your Image">
     </div>
 </div>
+
 </body>
 </html>
